Add basic styling to website.

--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title> Cookie </title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
         <h1> Cookie </h1>
-        <img src="../images/cookie.jpeg">
+        <div class="image"><img src="../images/cookie.jpeg"></div>
         <h3> Description </h3>
         <p>
             A cookie is a baked or cooked snack or dessert that is typically small, flat and sweet.
