--- a/recipes/pancake.html
+++ b/recipes/pancake.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title> Pancake </title>
+        <link rel="stylesheet" href="../style.css">
+
     </head>
 
     <body>
         <h1> Pancake </h1>
-        <img src="../images/pancake.jpeg">
+        <div class="image"><img src="../images/pancake.jpeg"></div>
         <h3> Description </h3>
         <p>
             A pancake is a thin, flat, circular piece of cooked batter made from milk, flour, and eggs. 
