--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
     <head>
         <meta charsert="UTF-8">
         <title> Recipes </title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <h1> Recipes </h1>
-    <ul>
-        <li><a href="./recipes/pancake.html"> Pancake </a></li>
-        <li><a href="./recipes/waffle.html"> Waffle </a> </li>
-        <li><a href="./recipes/cookie.html"> Cookie </a></li>
-    </ul>
+        <div class="list">
+        <ul>
+             <li><a href="./recipes/pancake.html"> Pancake </a></li>
+            <li><a href="./recipes/waffle.html"> Waffle </a> </li>
+            <li><a href="./recipes/cookie.html"> Cookie </a></li>
+        </ul>
+        </div>
         
     </body>
 </html>
