--- a/recipes/waffle.html
+++ b/recipes/waffle.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title> Waffle </title>
+        <link rel="stylesheet" href="../style.css">
+
     </head>
 
     <body>
         <h1> Waffle </h1>
-        <img src="../images/waffle.jpeg">
+        <div class="image"><img src="../images/waffle.jpeg"></div>
         <h3> Description </h3>
         <p>
             A waffle is a dish made from leavened batter or dough that is cooked between two plates 
