Try to make it responsive, Add more flexbox

--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -7,7 +7,10 @@
     </head>
 
     <body>
-        <h1> Cookie </h1>
+        <div class="heading">
+            <h1> Cookie </h1>
+        </div>
+       
         <div class="image"><img src="../images/cookie.jpeg"></div>
         <h3> Description </h3>
         <p>
@@ -19,8 +22,9 @@
         </p>
        
         <p>
-            <h4> Ingredients </h4>
+            <h3> Ingredients </h3>
             <ul>
+                <div class="arrange">
                 <li> eggs </li>
                 <li> baking powder </li>
                 <li> flour </li>
@@ -29,9 +33,10 @@
                 <li> butter </li>
                 <li> salt </li>
                 <li> milk </li>
+                </div>
             </ul>
 
-            <h4> Steps </h4>
+            <h3> Steps </h3>
             <ol>
                 <li> Preheat oven to 350 degrees. </li>
                 <li> Cream together the butter, white sugar, and brown sugar until smooth. </li>
