--- a/recipes/waffle.html
+++ b/recipes/waffle.html
@@ -8,7 +8,9 @@
     </head>
 
     <body>
-        <h1> Waffle </h1>
+        <div class="heading">
+            <h1> Waffle </h1>
+        </div>
         <div class="image"><img src="../images/waffle.jpeg"></div>
         <h3> Description </h3>
         <p>
@@ -18,8 +20,9 @@
         </p>
        
         <p>
-            <h4> Ingredients </h4>
+            <h3> Ingredients </h3>
             <ul>
+                <div class="arrange">
                 <li> eggs </li>
                 <li> baking powder </li>
                 <li> flour </li>
@@ -27,9 +30,10 @@
                 <li> butter </li>
                 <li> salt </li>
                 <li> milk </li>
+                </div>
             </ul>
 
-            <h4> Steps </h4>
+            <h3> Steps </h3>
             <ol>
                 <li> Preheat iron to desired temperature. </li>
                 <li> Mix flour, salt,  baking powder, and sugar</li>
