--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     </head>
 
     <body>
-        <h1> Recipes </h1>
+        <div class="heading">
+            <h1> Recipes </h1>
+        </div>
+        
         <div class="list">
-        <ul>
-             <li><a href="./recipes/pancake.html"> Pancake </a></li>
-            <li><a href="./recipes/waffle.html"> Waffle </a> </li>
-            <li><a href="./recipes/cookie.html"> Cookie </a></li>
+        <ul class="main">
+             <li class="links"><a href="./recipes/pancake.html"> Pancake </a></li>
+            <li class="links"><a href="./recipes/waffle.html"> Waffle </a> </li>
+            <li class="links"><a href="./recipes/cookie.html"> Cookie </a></li>
         </ul>
         </div>
         
