Fix bugs pertaining to descriptions

--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -14,11 +14,11 @@
         <div class="image"><img src="../images/cookie.jpeg"></div>
         <h3> Description </h3>
         <p>
-            A cookie is a baked or cooked snack or dessert that is typically small, flat and sweet.
+            A cookie is a baked or cooked snack or dessert that is typically small, flat and sweet.<br>
 
-             It usually contains flour, sugar, egg, and some type of oil, fat, or butter.
+             It usually contains flour, sugar, egg, and some type of oil, fat, or butter.<br>
 
-              It may include other ingredients such as raisins, oats, chocolate chips, nuts, etc.
+              It may include other ingredients such as raisins, oats, chocolate chips, nuts, etc.<br>
         </p>
        
         <p>
