--- a/recipes/waffle.html
+++ b/recipes/waffle.html
@@ -14,9 +14,9 @@
         <div class="image"><img src="../images/waffle.jpeg"></div>
         <h3> Description </h3>
         <p>
-            A waffle is a dish made from leavened batter or dough that is cooked between two plates 
+            A waffle is a dish made from leavened batter or dough that is cooked between two plates. <br>
 
-             that are patterned to give a characteristic size, shape, and surface impression.
+             that are patterned to give a characteristic size, shape, and surface impression. <br>
         </p>
        
         <p>
