--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -13,7 +13,7 @@
        
         <div class="image"><img src="../images/cookie.jpeg"></div>
         <h3> Description </h3>
-        <p>
+        <p class="nice-para">
             A cookie is a baked or cooked snack or dessert that is typically small, flat and sweet.<br>
 
              It usually contains flour, sugar, egg, and some type of oil, fat, or butter.<br>
