--- a/recipes/waffle.html
+++ b/recipes/waffle.html
@@ -13,7 +13,7 @@
         </div>
         <div class="image"><img src="../images/waffle.jpeg"></div>
         <h3> Description </h3>
-        <p>
+        <p class="nice-para">
             A waffle is a dish made from leavened batter or dough that is cooked between two plates. <br>
 
              that are patterned to give a characteristic size, shape, and surface impression. <br>
