--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <div class="heading">
             <h1> Recipes </h1>
         </div>
+
+        <div class="picture">
+            <img src="./images/breakfast.jpg">
+        </div>
         
         <div class="list">
         <ul class="main">
